--- a/web/index.html
+++ b/web/index.html
@@ -49,15 +49,70 @@
 
     <!-- Use Ace as the text editor -->
     <script src="third_party/js/ace-1.33.2.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="third_party/js/underscore-umd-1.13.6.min.js"></script>
 
     <script type="text/javascript">
       import("../wasm/index.js").catch(e => console.error("Error importing `index.js`:", e));
+      // Taken from underscore 1.13.6
+      function restArguments(func, startIndex) {
+        startIndex = startIndex == null ? func.length - 1 : +startIndex;
+        return function() {
+          var length = Math.max(arguments.length - startIndex, 0),
+              rest = Array(length),
+              index = 0;
+          for (; index < length; index++) {
+            rest[index] = arguments[index + startIndex];
+          }
+          switch (startIndex) {
+            case 0: return func.call(this, rest);
+            case 1: return func.call(this, arguments[0], rest);
+            case 2: return func.call(this, arguments[0], arguments[1], rest);
+          }
+          var args = Array(startIndex + 1);
+          for (index = 0; index < startIndex; index++) {
+            args[index] = arguments[index];
+          }
+          args[startIndex] = rest;
+          return func.apply(this, args);
+        };
+      }
+      function debounce(func, wait, immediate) {
+        var timeout, previous, args, result, context;
+
+        var later = function() {
+          var passed = now() - previous;
+          if (wait > passed) {
+            timeout = setTimeout(later, wait - passed);
+          } else {
+            timeout = null;
+            if (!immediate) result = func.apply(context, args);
+            // This check is needed because `func` can recursively invoke `debounced`.
+            if (!timeout) args = context = null;
+          }
+        };
+
+        var debounced = restArguments(function(_args) {
+          context = this;
+          args = _args;
+          previous = now();
+          if (!timeout) {
+            timeout = setTimeout(later, wait);
+            if (immediate) result = func.apply(context, args);
+          }
+          return result;
+        });
+
+        debounced.cancel = function() {
+          clearTimeout(timeout);
+          timeout = args = context = null;
+        };
+
+        return debounced;
+      }
 
       function setup_editor(div) {
         var editor_div = div.find(".editor");
         var editor = ace.edit(editor_div.get(0));
-        editor.getSession().on('change', _.debounce(on_change, 100));
+        editor.getSession().on('change', debounce(on_change, 100));
 
         var download_link = div.find('.download');
         download_link.click(function(ev) {
