--- a/web/index.html
+++ b/web/index.html
@@ -50,8 +50,33 @@
     <!-- Use Ace as the text editor -->
     <script src="third_party/js/ace-1.33.2.min.js" type="text/javascript" charset="utf-8"></script>
 
+    <!-- Note the usage of `type=module` here as this is an ES6 module -->
+    <script type="module">
+      // Use ES module import syntax to import functionality from the module
+      // that we have compiled.
+      //
+      // Note that the `default` import is an initialization function which
+      // will "boot" the module and make it ready to use. Currently browsers
+      // don't support natively imported WebAssembly as an ES module, but
+      // eventually the manual initialization won't be required!
+      import init, { initialize, generate } from '../wasm/pkg/skreate_wasm.js';
+
+      async function run() {
+        // First up we need to actually load the wasm file, so we use the
+        // default export to inform it where the wasm file is located on the
+        // server, and then we wait on the returned promise to wait for the
+        // wasm to be loaded.
+        await init();
+
+        // And afterwards we can use all the functionality defined in wasm.
+        initialize();
+        const result = generate("abcd");
+        console.log(`message = ${result}`);
+      }
+
+      run();
+    </script>
     <script type="text/javascript">
-      import("../wasm/index.js").catch(e => console.error("Error importing `index.js`:", e));
       // Taken from underscore 1.13.6
       function restArguments(func, startIndex) {
         startIndex = startIndex == null ? func.length - 1 : +startIndex;
