web: remove briefly-displayed warning
Assume the existence of Javascript.

--- a/web/index.html
+++ b/web/index.html
@@ -30,8 +30,7 @@
             </div>
             <a href="#" class="download">Download as SVG</a>
             </td>
-            <td class="diagram">Is Javascript enabled?
-            </td>
+            <td class="diagram"></td>
           </tr>
         </table>
       </section>
