--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
       // will "boot" the module and make it ready to use. Currently browsers
       // don't support natively imported WebAssembly as an ES module, but
       // eventually the manual initialization won't be required!
-      import init, { initialize, generate } from '../wasm/pkg/skreate_wasm.js';
+      import init, { initialize, generate } from '../pkg/skreate_wasm.js';
 
       async function run() {
         // First up we need to actually load the wasm file, so we use the
