--- a/web/index.html
+++ b/web/index.html
@@ -26,9 +26,12 @@
             <td>
             <h3>Demo. Try editing me below</h3>
             <div class="editor-wrapper">
-              <div class="editor">text goes here
-more
-more</div>
+              <div class="editor">LFO          # text after a hash is ignored
+xf-RFI       # put each move on its own line
+LFO; xf-RFO  # or use a semi-colon to separate moves
+
+# blank lines are ignored
+LFO</div>
             </div>
             <a href="#" class="download">Download as SVG</a>
             </td>
