Add preview link

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,8 @@
               </div>
             </div>
             <a href="#" class="download">Download as SVG</a>
+            |
+            <a href="#" class="preview">Preview</a>
             </td>
             <td class="diagram"></td>
           </tr>
