--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Demo</h1>
-        <h2>Convert text into skating diagram</h2>
+        <h1>Skating Diagram Generator</h1>
       </div>
     </header>
 
@@ -43,7 +42,7 @@
     <footer>
       <hr />
       <div class="inner">
-        <a href="https://lurklurk.org">David Drysdale<a> - <a href="https://github.com/daviddrysdale">GitHub</a>
+        <a href="https://lurklurk.org">David Drysdale<a> - <a href="https://github.com/daviddrysdale/skreate">GitHub</a>
       </div>
     </footer>
 
@@ -59,12 +58,12 @@
       import {setup_editor} from './skreate.js';
 
       $(document).ready(function() {
-        var text = `LFO          # text after a hash is ignored
-xf-RFI       # put each move on its own line
-LFO; xf-RFO  # or use a semi-colon to separate moves
+          var text = `LFO          # text after a hash is ignored
+xf-RFI3      # put each move on its own line
+LFO; xf-RFI  # or use a semi-colon to separate moves
 
 # blank lines are ignored
-LFO`
+LFO-Rk`
         var urlParams = new URLSearchParams(window.location.search);
         if (urlParams.has('text')) {
           text = urlParams.get('text');
