--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
             |
             <a href="#" class="preview">Preview</a>
             </td>
-            <td class="diagram"></td>
+            <td><div class="diagram"></div></td>
           </tr>
         </table>
       </section>
