--- a/web/index.html
+++ b/web/index.html
@@ -65,7 +65,7 @@ LFO; xf-RFI  # or use a semi-colon to separate moves
 # blank lines are ignored
 LFO-Rk
 
-Title [text="My Programme"]
+Title [text="My Program"]
 Label [text="add label centred here",x=200,y=200]`
         var urlParams = new URLSearchParams(window.location.search);
         if (urlParams.has('text')) {
