Improve and link to manual

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,9 @@
     <footer>
       <hr />
       <div class="inner">
-        <a href="https://lurklurk.org">David Drysdale<a> - <a href="https://github.com/daviddrysdale/skreate">GitHub</a>
+        <a href="doc/manual.html">Manual</a> -
+        <a href="https://lurklurk.org">David Drysdale<a> -
+            <a href="https://github.com/daviddrysdale/skreate">GitHub</a>
       </div>
     </footer>
 
