--- a/web/index.html
+++ b/web/index.html
@@ -76,7 +76,7 @@ LFO; xf-RFI  # or use a semi-colon to separate moves
 LFO-Rk
 
 Title [text="My Program"]
-Label [text="add label centred here",x=200,y=200]`
+Text [text="add text centred here",x=400,y=400]`
         }
 
         setup_editor($('#demo'), true, text);
