--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,8 @@
             <a href="#" class="download">Download as SVG</a>
             |
             <a href="#" class="preview">Preview</a>
+            |
+            <button id="playthrough">Play</button>
             </td>
             <td><div class="diagram" id="pic"></div></td>
           </tr>
