Tweak page layout

--- a/web/index.html
+++ b/web/index.html
@@ -16,13 +16,15 @@
       </div>
     </header>
 
+    <h3> Read the <a href="doc/manual.html">Manual</a>!</h3>
+
     <div id="main">
 
       <section id="demo">
         <table align="center" class="inner">
           <tr>
             <td>
-            <h3>Demo. Try editing me below</h3>
+            <h3>Edit text below</h3>
             <div class="editor-wrapper" id="ed">
               <div class="editor">
               </div>
@@ -43,9 +45,9 @@
     <footer>
       <hr />
       <div class="inner">
-        <a href="doc/manual.html">Manual</a> -
-        <a href="https://lurklurk.org">David Drysdale<a> -
-            <a href="https://github.com/daviddrysdale/skreate">GitHub</a>
+        <a href="https://github.com/daviddrysdale/skreate">GitHub</a>
+        |
+        <a href="https://lurklurk.org">David Drysdale<a>
       </div>
     </footer>
 
