Add "Save" link

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,8 @@
               <div class="editor">
               </div>
             </div>
+            <a href="#" class="save">Save</a>
+            |
             <a href="#" class="download">Download as SVG</a>
             |
             <a href="#" class="preview">Preview</a>
