--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
       </div>
     </header>
 
-    <h3> Read the <a href="doc/manual.html">Manual</a>!</h3>
+    <h3> Read the <a href="manual.html">Manual</a>!</h3>
 
     <div id="main">
 
