Restore link to reference manual

--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,8 @@
     <footer>
       <hr />
       <div class="inner">
+        <a href="manual.html">Reference Manual</a>
+        |
         <a href="https://github.com/daviddrysdale/skreate">GitHub</a>
         |
         <a href="https://lurklurk.org">David Drysdale<a>
